--- a/src/css/App.css
+++ b/src/css/App.css
@@ -123,3 +123,15 @@ hr {
   -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
   transition: all 0.3s ease 0s;
 }
+
+.button-link {
+  background: none !important;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.button-link:focus {
+  border: none;
+  outline: none;
+}
