--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -20,11 +20,14 @@ nav ul li {
   display: inline-block;
 }
 
-nav ul li a {
+nav div button,
+nav ul li .custom-nav-item,
+nav ul li button {
   display: block;
   padding: 15px;
-  text-transform: uppercase;
   margin: 0 5px;
+  font-size: large;
+  font-weight: 900;
 }
 
 .page-footer {
