--- a/src/css/App.css
+++ b/src/css/App.css
@@ -27,12 +27,19 @@ body {
   font-style: var(--font-color);
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
 .custom-text {
   color: var(--font-color) !important;
 }
 
 .page-content {
-  flex: 1 0 auto;
+  flex: 1;
+  /* flex: 1 0 auto; */
 }
 
 small {
